remove get-charts unused api endpoint
